# GitHub

./: .gitignore
Language/: C++_tutorial.h  Java_tutorial.java  R_tutorial.r  SQL_tutorial.sql  W3School_XML.txt  报告.txt
Qt/Main/: CMakeLists.txt  basic.cpp  basic.h  main.cpp  说明.docx
Qt/Main/test_client/: CMakeLists.txt  client.cpp
Qt/Main/test_server/: CMakeLists.txt  server.cpp
SA/: .RDataTmp  .Rhistory  AlertMagique.R  Algo.R  Algo1.R  Algo1_DataPreparation.R  Algo1_Functions.R  Algo2.R  Algo2_Connect.cpp  Algo2_Functions.R  Algo2_VizZoneWindow.R  Algo2_makeGrid.R  Algo_VizVIP.R  Compute.cmd  Compute1675.cmd  ComputeNPO.bat  MakeGrid.R  PrepareFromExtraction.R  README.md  Test.R
SA_1_click/: .Rhistory  Result.v20151123  SA_CC.Rmd  SA_CC.md  SA_PM.md  SA_data_preparation.R  SA_end2end.R  SA_function.R  SA_function_old.R  SA_otherActions.R  TLPC.R
SA_Algo1_TimeSpace/: .Rhistory  DataPreparation.R  main.R  mainWithoutArgs.R
SA_Algo2_ZoneWindow/: .Rhistory  Algo1.R  Algo1_DataPreparation.R  Algo1_Functions.R  Algo2.R  Algo2_VizZoneWindow.R  Algo2_makeGrid.R  VizZoneWindow.R  mainWithoutArgs.R  makeGrid.R
SA_App_4250/: .Rhistory  App_4250_Analysis.Rmd  App_4250_Analysis.md  App_4250_Segmentation_general.R  App_4250_data_preparation.R  App_4250_find_taxi_driver.R  App_4250_geographic_model.R  App_4250_script.r  Geographic_end2end.R  SA_function.R  SimpleTest.r  SinglePerson.R  Zone_TimeWindow.R
SA_Reference/: .Rhistory  JF.sens  Ref.sens  Ref_Sens_Escota.R  Ref_gares.Rmd  Ref_gares.md  Reference.R  Rsens_SF.txt
SA_Script/: .Rhistory  DataPreparation.R  (+3 more)
(+233 files in other folders)
