SET(ProjectName TCPServer)
PROJECT(${ProjectName})

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(OpenMP) 
if (OPENMP_FOUND) 
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif (OPENMP_FOUND)

FIND_PACKAGE( OpenCV REQUIRED )


#find Orsa and KVLD librarys
ADD_DEFINITIONS(-DSOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")

ADD_EXECUTABLE(${ProjectName} server.cpp )
TARGET_LINK_LIBRARIES(${ProjectName} ${OpenCV_LIBS})

